Melhoria na adição de opções do produto

--- a/Client/wwwroot/css/styles/base/components/_buttons.scss
+++ b/Client/wwwroot/css/styles/base/components/_buttons.scss
@@ -55,6 +55,7 @@
 
     &__tertiary {
         @include c-btn-base;
+        padding: 0;
         background-color: transparent;
         color: $primary-color;
 
