--- a/Client/Pages/DetalheProduto.razor.css
+++ b/Client/Pages/DetalheProduto.razor.css
@@ -37,7 +37,7 @@
 
 .c-checkbox__group {
   display: flex;
-  align-items: baseline;
+  align-items: flex-end;
   gap: 4px;
 }
 .c-checkbox__group * {
