--- a/Client/wwwroot/css/styles/base/_typography.css
+++ b/Client/wwwroot/css/styles/base/_typography.css
@@ -1,6 +1,6 @@
 ﻿@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 body {
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", sans-serif !important;
   font-size: 16px;
   line-height: 1.6;
   color: #10435C;
