--- a/Client/wwwroot/css/styles/base/_typography.scss
+++ b/Client/wwwroot/css/styles/base/_typography.scss
@@ -3,7 +3,7 @@
 
 
 body {
-    font-family: $font-family;
+    font-family: $font-family !important;
     font-size: $base-font-size;
     line-height: 1.6;
     color: $primary-color;
