--- a/Client/wwwroot/css/styles/base/main.css
+++ b/Client/wwwroot/css/styles/base/main.css
@@ -1,6 +1,6 @@
 ﻿@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 body {
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", sans-serif !important;
   font-size: 16px;
   line-height: 1.6;
   color: #10435C;
@@ -106,6 +106,7 @@ button {
   font-weight: 500;
   gap: 8px;
   border: none;
+  padding: 0;
   background-color: transparent;
   color: #10435C;
 }
