--- a/Client/Pages/DetalheProduto.razor.css
+++ b/Client/Pages/DetalheProduto.razor.css
@@ -8,6 +8,10 @@
   margin-bottom: 24px;
 }
 
+.c-d-none {
+  display: none !important;
+}
+
 .c-images {
   display: flex;
   align-items: center;
@@ -20,8 +24,12 @@
   width: 150px;
   aspect-ratio: 1;
   border-radius: 8px;
-  padding: 16px;
   background-color: #1f82b3;
+}
+.c-images__preview {
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
 }
 
 .c-group {
