--- a/Client/Pages/DetalheProduto.razor.scss
+++ b/Client/Pages/DetalheProduto.razor.scss
@@ -11,6 +11,10 @@
     }
 }
 
+.c-d-none {
+    display: none !important;
+}
+
 .c-images {
     display: flex;
     align-items: center;
@@ -23,8 +27,13 @@
         width: 150px;
         aspect-ratio: 1;
         border-radius: $border-radius-medium;
-        padding: 16px;
         background-color: $primary-color-light;
+    }
+
+    &__preview {
+        width: 100%;
+        height: 100%;
+        cursor: pointer;
     }
 }
 
