--- a/Client/Pages/DetalheProduto.razor.css
+++ b/Client/Pages/DetalheProduto.razor.css
@@ -24,12 +24,14 @@
   width: 150px;
   aspect-ratio: 1;
   border-radius: 8px;
-  background-color: #1f82b3;
+  background-color: #EFF2F4;
 }
 .c-images__preview {
+  border-radius: 8px;
   width: 100%;
   height: 100%;
   cursor: pointer;
+  object-fit: cover;
 }
 
 .c-group {
