--- a/Client/Pages/DetalheProduto.razor.scss
+++ b/Client/Pages/DetalheProduto.razor.scss
@@ -27,13 +27,15 @@
         width: 150px;
         aspect-ratio: 1;
         border-radius: $border-radius-medium;
-        background-color: $primary-color-light;
+        background-color: $light-blue-color;
     }
 
     &__preview {
+        border-radius: $border-radius-medium;
         width: 100%;
         height: 100%;
         cursor: pointer;
+        object-fit: cover;
     }
 }
 
