--- a/Client/Shared/Produtos/CamposComponent.razor
+++ b/Client/Shared/Produtos/CamposComponent.razor
@@ -4,11 +4,11 @@
     <div class="c-character">
         <div class="c-form__field">
             <label class="c-form__label" for="">Nome do campo</label>
-            <input class="c-form__input" type="text" id="" @bind="@Campo.Input">
+            <input class="c-form__input" type="text" id="" @bind="@Campo.Input" required>
         </div>
         <div class="c-form__field">
             <label class="c-form__label" for="">Informativo</label>
-            <input class="c-form__input" type="text" id="" @bind="@Campo.Informativo">
+            <input class="c-form__input" type="text" id="" @bind="@Campo.Informativo" required>
         </div>
         <div class="c-checkbox__group">
             <input class="c-checkbox" id="c-check" type="checkbox" @bind="@Campo.Obrigatorio">
