--- a/Client/Pages/ProdutoPage.razor
+++ b/Client/Pages/ProdutoPage.razor
@@ -151,6 +151,7 @@
 
     protected override async Task OnInitializedAsync()
     {
+        await Http.GetFromJsonAsync<ProdutoModel>("Produto/");
         LimpaProduto();
         await GetProdutos();
     }
@@ -162,7 +163,7 @@
 
     protected async Task<List<ProdutoModel>> GetProdutos()
     {
-        Produtos = await Http.GetFromJsonAsync<List<ProdutoModel>>("Produto");
+        
         Produtos.OrderBy(o => o.Nome);
 
         return Produtos;
