Required nos campos de adicionar produto

--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -1,6 +1,9 @@
 ﻿@inherits LayoutComponentBase
 @inject ISnackbar Snackbar
 
+<MudThemeProvider />
+<MudDialogProvider />
+<MudSnackbarProvider />
 <div class="page">
     <div class="sidebar">
         <NavMenu />
